log
Wed 12 Apr 2023 09:03:55 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:58:32: error: ‘map’ undeclared (first use in this function)
   58 |   HashMap *local=malloc(sizeof(map));
      |                                ^~~
hashmap.c:58:32: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:59:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   local->buckets=(Pair*)malloc(sizeof(Pair)*capacity);
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
458b951
Wed 12 Apr 2023 09:04:13 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   59 |   local->buckets=(Pair*)malloc(sizeof(Pair)*capacity);
      |                 ^
hashmap.c:59:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   59 |   local->buckets=(Pair*)malloc(sizeof(Pair)*capacity);
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
hashmap.c:60:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   60 |   local->size=0;
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
hashmap.c:61:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   61 |   local->current=-1;
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
54ba4b8
Wed 12 Apr 2023 09:04:49 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:59:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   59 |   local->buckets=(Pair**)malloc(sizeof(local->buckets)*capacity);
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
hashmap.c:60:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   60 |   local->size=0;
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
hashmap.c:61:8: error: array subscript ‘HashMap {aka struct HashMap}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds]
   61 |   local->current=-1;
      |        ^~
hashmap.c:58:18: note: referencing an object of size 8 allocated by ‘malloc’
   58 |   HashMap *local=malloc(sizeof(local));
      |                  ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
681aa03
Wed 12 Apr 2023 09:05:18 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
ca6691f
Wed 12 Apr 2023 09:07:47 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:60:14: error: expected ‘,’ or ‘;’ before ‘:’ token
   60 |   for(int i=0:i<capacity;i++)
      |              ^
hashmap.c:60:29: error: expected ‘;’ before ‘)’ token
   60 |   for(int i=0:i<capacity;i++)
      |                             ^
      |                             ;
Compilation failed
f95869a
Wed 12 Apr 2023 09:08:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
826496f
Wed 12 Apr 2023 09:11:45 PM UTC: 
 hashmap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
2f50d26
Wed 12 Apr 2023 09:12:23 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:63:7: error: implicit declaration of function ‘printrf’; did you mean ‘printf’? [-Werror=implicit-function-declaration]
   63 |       printrf("%d \n",i);
      |       ^~~~~~~
      |       printf
cc1: all warnings being treated as errors
Compilation failed
ced56fd
Wed 12 Apr 2023 09:12:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0073617
Wed 12 Apr 2023 09:15:58 PM UTC: 
 hashmap.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  0|6
total_score: 0/70
73e9e7b
Wed 12 Apr 2023 09:24:54 PM UTC: 
 hashmap.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
51f3e21
Wed 12 Apr 2023 09:30:10 PM UTC: 
 hashmap.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:17: error: assignment to ‘Pair **’ from incompatible pointer type ‘Pair *’ [-Werror=incompatible-pointer-types]
   65 |   local->buckets=elementos;
      |                 ^
cc1: all warnings being treated as errors
Compilation failed
a4dabbc
Wed 12 Apr 2023 09:30:37 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
c0c894d
Wed 12 Apr 2023 09:35:10 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|6
total_score: 0/70
d22b7b9
Wed 12 Apr 2023 09:36:23 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  0|6
total_score: 0/70
d94f528
Wed 12 Apr 2023 09:42:58 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:65:15: error: expected expression before ‘;’ token
   65 |   local->size=;
      |               ^
Compilation failed
1ee1f24
